syntax = "proto3";

package Views;

message ViewsVideoDto {
  string userId = 1;
  string videoId = 2;
}

message ViewsVideoResponse {
  string response = 1;
}

service ViewsService {
  rpc viewVideo (ViewsVideoDto) returns (ViewsVideoResponse) {};
}